# PtrHash

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  evals.py  readme.md
.github/workflows/: ci.yml
data/: comparison_3e8_gx.txt
examples/: epserde.rs  evals.rs  large_bench.rs  query_bench.rs  string_keys.rs
src/: bucket_fn.rs  build.rs  fastmod.rs  hash.rs  lib.rs  pack.rs  reduce.rs  shard.rs  sort_buckets.rs  test.rs  util.rs
